Fixes ugly scrollbars on code elements

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -25,6 +25,7 @@ pre {
   margin-bottom: var(--spacer);
   background-color: var(--code-bg);
   border-radius: var(--border-radius);
+  scrollbar-color: var(--scrollbar-color);
 
   pre {
     margin-bottom: 0;
