--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -63,6 +63,7 @@
   --message-bg: var(--yellow-light);
   --quote-color: var(--blue-dark);
   --quote-accent: var(--blue);
+  --scrollbar-color: var(--light-2) var(--light-1);
 
   --border-color: var(--dark-2);
 
@@ -81,6 +82,7 @@
     --message-bg: var(--yellow);
     --quote-color: var(--blue-light);
     --quote-accent: var(--blue);
+    --scrollbar-color: var(--dark-1) var(--dark-2);
 
     --link-color: var(--light-1);
     --link-border-color: var(--dark-2);
